--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.24.1",
     "@clerk/themes": "^2.2.20",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
+    "motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.3.0"
