--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@clerk/clerk-react": "^5.24.1",
     "@clerk/themes": "^2.2.20",
     "axios": "^1.8.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
